--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.5",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "jw-paginate": "^1.0.4",
     "nodemon": "^2.0.7",
-    "puppeteer": "^8.0.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.6"
   }
