--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "first app",
   "main": "app.js",
   "scripts": {
+    "start":"nodemon app.js",
     "dev": "nodemon app.js"
   },
   "author": "Charan",
